--- a/app/src/main/res/layout/activity_create_account2.xml
+++ b/app/src/main/res/layout/activity_create_account2.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateAccountActivity"
-    android:layout_marginVertical="32dp"
-    android:layout_centerHorizontal="true">
-
+    android:layout_marginVertical="16dp"
+    android:layout_marginHorizontal="32dp"
+    tools:context=".CreateAccountActivity">
     <ImageView
-        android:id="@+id/sign_up_icon"
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:layout_centerHorizontal="true"
         android:layout_marginVertical="32dp"
+        android:id="@+id/sign_up_icon"
         android:src="@drawable/img"/>
 
     <LinearLayout
@@ -27,7 +25,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello"
+            android:text="Hello."
             android:textStyle="bold"
             android:textSize="32sp"
             android:textColor="@color/black"/>
@@ -37,31 +35,30 @@
             android:layout_height="wrap_content"
             android:text="Let's get started"
             android:textStyle="bold"
-            android:textSize="32sp"
+            android:textSize="36sp"
             android:textColor="@color/black"/>
-
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/hello_text"
         android:id="@+id/form_layout"
+        android:layout_below="@id/hello_text"
         android:layout_marginVertical="32dp"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/email_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/rounded_corner"
-            android:hint="Email Id"
+            android:id="@+id/email_edit_text"
             android:inputType="textEmailAddress"
+            android:hint="Email Id"
+            android:textSize="20sp"
+            android:background="@drawable/rounded_corner"
             android:padding="16dp"
-            android:textSize="20sp" />
-
+            android:layout_marginTop="12dp"
+            />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,7 +68,8 @@
             android:textSize="20sp"
             android:background="@drawable/rounded_corner"
             android:padding="16dp"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="12dp"
+            />
 
         <EditText
             android:layout_width="match_parent"
@@ -82,15 +80,17 @@
             android:textSize="20sp"
             android:background="@drawable/rounded_corner"
             android:padding="16dp"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="12dp"
+            />
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="match_parent"
-            android:layout_height="64dp"
             android:id="@+id/create_account_btn"
-            android:text="Create Acoount"
+            android:layout_height="64dp"
+            android:text="Create Account"
             android:layout_marginTop="12dp"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            />
 
         <ProgressBar
             android:layout_width="24dp"
@@ -100,32 +100,26 @@
             android:visibility="gone"
             android:layout_marginTop="12dp"/>
 
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/form_layout"
+        android:layout_below="@id/form_layout"
         android:orientation="horizontal"
         android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Already have an account?"/>
-
+            android:text="Already have an account? "/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:id="@+id/login_text_view_btn"
-            android:text=" Login"/>
-
-
+            android:text="Login"/>
 
     </LinearLayout>
-
-
 
 </RelativeLayout>
